--- a/Menor/CSS_Menor/style_menor.css
+++ b/Menor/CSS_Menor/style_menor.css
@@ -32,10 +32,10 @@ main{
    
 }
 
-#imagem{
+#cerveja{
     position: relative;
     top: 35px;
-    margin-top: 100px
+    margin-top: 70px
 }
 
 #mensagem{
@@ -45,7 +45,7 @@ main{
     padding: 45px; 
     border-radius: 40px;
     font-size: 10pt;
-    margin-bottom: 150px;
+    margin-bottom: 70px;
   
     
 }
@@ -53,3 +53,59 @@ main{
 #mensagem h1{
     font-weight: 400;
 }
+
+#guarana{
+    margin: 0px;
+}
+
+
+#valor {
+    font-weight: 200;
+    text-align: center;
+    margin: 0;
+    font-size: 20pt;
+}
+div#compra{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+div#enviar{
+    width: 100%;
+    height: 200%;
+    align-items: center;
+    margin-top: 20px;
+}
+
+
+div#enviar label{
+    font-weight: 200;
+    font-size: 15pt;
+}
+
+#quantidade{
+    width: 40px;
+    height: 20px;
+    border: none;
+    
+ }
+
+#botao_comprar{
+    background-color: #CA8500;
+    border: 5px solid #F5F5F5;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 10px 45px 10px 45px;
+    color: white;
+    font-size: 15pt;
+    font-weight: 600;
+    text-decoration: none;
+    margin-top: 20px;
+}
+
+
+
+
